Changed default Namespace

--- a/Auto-Updater/Dragonware Updater.vbproj
+++ b/Auto-Updater/Dragonware Updater.vbproj
@@ -8,6 +8,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
